@@ -5,6 +5,8 @@
 * Fix: Correctly show the available payment methods when paying for a subscription renewal order. PR#9
 * Fix: Don't show the WC Subscriptions extension welcome/installation message after installing WCS Core. PR#11
 * Fix: Remove the "Welcome to Subscriptions" notice that is displayed upon upgrading from previous minor versions. PR#14
+* Fix: Don't display a "Welcome to Subscriptions 2.1" for stores that have upgraded from really old version of Subscriptions. PR#16
+* Fix: Errors during the upgrade process for stores that are upgrading from very old versions of Subscriptions (1.5.0). PR#16
 
 2021-09-22 - version 1.0.0
 * New: Subscriptions Core first release
